# L-Language-Compiler

./: .gitignore  CMakeLists.txt  README.md  build.ninja  build.ps1  build.sh  main.cpp  main.l  syntax.ebnf
include/: ast.h  builder.h  error_handler.h  handle.h  jit.h  lexer.h  op.h  parser.h  store.h  token.h
src/: CMakeLists.txt
src/include/: ast.h  error_handler.h  handle.h  op.h  parser.h  tok.h
